adding data vis page

--- a/DataAnalysis/dataanalysis.html
+++ b/DataAnalysis/dataanalysis.html
@@ -80,7 +80,7 @@
         <div class="portfolio-details-slider swiper-container">
           <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide">
-              <img src="../assets/img/pythondash.png" alt="">
+              <img src="../assets/img/pythonapi.png" alt="">
             </div>
             <div class="swiper-slide">
               <img src="../assets/img/pythonscript.png" alt="">
@@ -140,7 +140,7 @@
         <div class="portfolio-details-slider swiper-container">
           <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide">
-              <img src="../assets/img/samdash.png" alt="">
+              <img src="../assets/img/sqltable.png" alt="">
             </div>
             <div class="swiper-slide">
               <img src="../assets/img/powerm.png" alt="">
@@ -167,7 +167,7 @@
         <!-- Python Box 2 -->
         <div class="portfolio-info">
           <ul>
-            <li>I leverage Microsoft Fabric to transform and analyze data efficiently. Using Power Query extensively for ETL processes, developing custom visuals in Power BI to deliver insightful reports. My dataflows ensure near real-time data integration, while OneLake serves as my data lake to eliminate data silos. I maintain a seamless and robust data ecosystem, ensuring that my data is always up-to-date and accessible.</li>
+            <li>I leverage Microsoft Fabric to transform and analyze data efficiently. Using Power Query extensively for ETL processes paired with Microsoft SSMS, developing custom data points to deliver insightful reports. My dataflows ensure near real-time data integration, while OneLake serves as my data lake to eliminate data silos. I maintain a seamless and robust data ecosystem, ensuring that my data is always up-to-date and accessible.</li>
           </ul>
         </div>
       </div>
