--- a/DataVisualization/datavisualization.html
+++ b/DataVisualization/datavisualization.html
@@ -41,9 +41,9 @@
 
     <nav id="navbar" class="navbar">
       <ul>
-        <li><a class="nav-link scrollto" href="../index.html">Home</a></li>
+        <li><a class="nav-link scrollto" href="/#hero">Home</a></li>
           <ul>
-        <li><a class="nav-link scrollto" href="/index.html#contact">Contact</a></li>
+        <li><a class="nav-link scrollto" href="/#contact">Contact</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
@@ -57,121 +57,114 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Web Development</h2>
+          <h2>Data Visualization</h2>
           <ol>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="webservices.html">Web Development</a></li>
+            <li><a href="/#hero">Home</a></li>
+            <li><a href="datavisualization.html">Data Visualization</a></li>
           </ol>
         </div>
 
       </div>
     </section><!-- Breadcrumbs Section -->
 
-<!-- ======= Portfolio Details Section 1 ======= -->
-<section id="portfolio-details" class="portfolio-details">
-  <div class="container">
+    <!-- ======= Portfolio Details Section 1 ======= -->
+    <section id="portfolio-details" class="portfolio-details">
+      <div class="container">
 
-    <div class="row gy-4">
+        <div class="row gy-4">
 
-      <!-- Image Slider (Left Column) -->
-      <div class="col-lg-8">
-        <div class="portfolio-details-slider swiper-container">
-          <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide">
-              <img src="../assets/img/BWGLHome.png" alt="">
+          <div class="col-lg-8">
+            <div class="portfolio-details-slider swiper-container">
+              <div class="swiper-wrapper align-items-center">
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/pythondash.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/samdash.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/dataflow.png" alt="">
+                </div>
+
+              </div>
+              <div class="swiper-pagination"></div>
             </div>
-            <div class="swiper-slide">
-              <img src="../assets/img/BWGLJoin.png" alt="">
-            </div>
-            <div class="swiper-slide">
-              <img src="../assets/img/BWGLPictures.png" alt="">
-            </div>               
           </div>
-          <div class="swiper-pagination"></div>
-        </div>
-      </div>
 
-      <!-- Python Info Boxes (Right Column) -->
-      <div class="col-lg-4">
-        <!-- Python Box 1 -->
-        <div class="portfolio-info python-overview">
-              <h3>Business Women's Golf League of Wichita</h3>
+          <div class="col-lg-4">
+            <div class="portfolio-info">
+              <h3>Salesman Scorecard</h3>
               <ul>
-                <li><strong>Client</strong>: BWGL of Wichita, Kansas</li>
-                <li><strong>Production Date</strong>: March 2025</li>
-                <li><strong>URL</strong>: <a href="#">https://www.bwglladysgolfwichita.com/</a></li>
+                <li><strong>Category</strong>: Power BI</li>
+                <li><strong>Client</strong>: MKC</li>
+                <li><strong>Project date</strong>: 2024/2025</li>
               </ul>
             </div>
+            <div class="portfolio-description">
+              <p>
+              I built and maintained the Salesman Scorecard for four departments at MKC, delivering a Power BI dashboard with year-over-year sales and row-level security so each salesman could securely track their performance. Behind the scenes, I designed ETL pipelines to integrate and transform data, and developed a C# solution in Visual Studio to connect our new CRM’s API, creating the relationships between salesmen and customers that drove accurate incentive tracking.
+              </p>
+            </div>
+          </div>
 
-        <!-- Python Box 2 -->
-        <div class="portfolio-info">
-          <ul>
-            <li>I built and maintain the website for the Wichita Women’s Business Golf League, a growing community of women professionals who connect through golf. The site features regularly updated tournament schedules, standings, monthly newsletters, and photos from league events. I designed it to be both functional and welcoming—with an easy path for new members to learn more and join the league. This project blends my love for data, design, and community-building.</li>
-          </ul>
         </div>
-      </div>
 
-    </div> 
-
-    <!-- End .row -->
       </div>
     </section>
-
     <!-- End Portfolio Details Section 1 -->
 
+    <!-- ======= Portfolio Details Section 2 ======= -->
+    <section id="portfolio-details" class="portfolio-details">
+      <div class="container">
 
-<!-- ======= Portfolio Details Section 2 ======= -->
-<section id="portfolio-details" class="portfolio-details">
-  <div class="container">
+        <div class="row gy-4">
 
-    <div class="row gy-4">
+          <div class="col-lg-8">
+            <div class="portfolio-details-slider swiper-container">
+              <div class="swiper-wrapper align-items-center">
 
-      <!-- Image Slider (Left Column) -->
-      <div class="col-lg-8">
-        <div class="portfolio-details-slider swiper-container">
-          <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide">
-              <img src="../assets/img/publichome.png" alt="">
+                <div class="swiper-slide">
+                  <img src="../assets/img/fueldash.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/fuelprices.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/fuelrelationships.png" alt="">
+                </div>
+
+              </div>
+              <div class="swiper-pagination"></div>
             </div>
-            <div class="swiper-slide">
-              <img src="../assets/img/publicstory.png" alt="">
-            </div>
-            <div class="swiper-slide">
-              <img src="../assets/img/brickyardhome.png" alt="">
-            </div>               
           </div>
-          <div class="swiper-pagination"></div>
-        </div>
-      </div>
 
-      <!-- Python Info Boxes (Right Column) -->
-      <div class="col-lg-4">
-        <!-- Python Box 1 -->
-        <div class="portfolio-info python-overview">
-              <h3>Public at the Brickyard</h3>
+          <div class="col-lg-4">
+            <div class="portfolio-info">
+              <h3>Fuel Dashboard</h3>
               <ul>
-                <li><strong>Client</strong>: Public at the Brickyard of Wichita, Kansas</li>
-                <li><strong>Production Date</strong>: December 2024</li>
-                <li><strong>URL</strong>: <a href="#">https://publicbrickyard.com</a></li>
+                <li><strong>Category</strong>: Power BI</li>
+                <li><strong>Client</strong>: MKC</li>
+                <li><strong>Project date</strong>: 2023/2024</li>
               </ul>
             </div>
-            <div class="portfolio-info">
-              <li>
-              Oversaw the transition of a restaurant’s website infrastructure to an internally managed server and hosting environment. This move improved performance, reliability, and long-term flexibility. I continue to manage updates to the server and site content to ensure a smooth experience for owners.</li>
-            </ul>
+            <div class="portfolio-description">
+              <p>I built a dashboard for the fuel department that tracks average prices of diesel and gas, showing which locations are charging what and how many gallons are sold at each site across fiscal years. To support this, I designed the underlying Power BI data model and created an item cross-reference system to unify products that were labeled differently across companies, ensuring accurate comparisons despite data silos.
+              </p>
+            </div>
           </div>
+
         </div>
-  
-      </div> <!-- End .row -->
-  
-    </div>
-  </section>
-      <!-- End Portfolio Details Section 2 -->
-  
-  
-    </main>
-    <!-- End #main -->
-  
+
+      </div>
+    </section><!-- End Portfolio Details Section 2 -->
+
+
+  </main><!-- End #main -->
 
 
   <!-- ======= Footer ======= -->
