--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-card-image"></i></div>
-              <h4 class="title"><a href="">Data Visualization</a></h4>
+              <h4 class="title"><a href="DataVisualization/datavisualization.html">Data Visualization</a></h4>
               <p class="description">Extract, transform, and load your data to create visualizations that illustrate your vision.</p>
             </div>
           </div>
