--- a/DataVisualization/datavisualization.html
+++ b/DataVisualization/datavisualization.html
@@ -41,7 +41,7 @@
 
     <nav id="navbar" class="navbar">
       <ul>
-        <li><a class="nav-link scrollto" href="/#hero">Home</a></li>
+        <li><a class="nav-link scrollto" href="../index.html">Home</a></li>
           <ul>
         <li><a class="nav-link scrollto" href="/#contact">Contact</a></li>
       </ul>
