--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
 
-              <h4>Business Intelligence Developer</h4>
-              <h5>2023 - Current</h5>
+              <h4>Data Engineer | Business Intelligence Developer</h4>
+              <h5>2022 - Current</h5>
               <p><em>MKC</em></p>
               <p>
               <ul>
@@ -258,8 +258,8 @@
                 <li>Championed a cultural shift toward data-driven decision-making by aligning leadership and frontline teams around strategic reporting</li>
               </ul>
               </p>
-              <h4>Business Analyst</h4>
-              <h5>2022 - 2023</h5>
+              <h4>BI Developer II</h4>
+              <h5>2021 - 2022</h5>
               <p><em>Restaurant Brands International</em></p>
               <p>
               <ul>
@@ -273,7 +273,7 @@
 
             <div class="resume-item">
               <h4>Data Analyst</h4>
-              <h5>2021 - 2022</h5>
+              <h5>2020 - 2021</h5>
               <p><em>Fleetcor, Wichita, KS </em></p>
               <p>
               <ul>
