--- a/index.html
+++ b/index.html
@@ -212,7 +212,14 @@
             <h3 class="resume-title">Outline</h3>
             <div class="resume-item pb-0">
               <h4>Kerry Wehner</h4>
-              <p><em>Developer with 8+ years of experience in project management. Passionate about building captivating web applications.</em></p>
+              <p><em>Data Engineer with a strong foundation in designing, building, and maintaining modern
+                    data infrastructure. Experienced in SQL development, ETL/ELT pipeline design, API
+                    integration, and cloud-based warehousing in both AWS and Azure environments. Skilled
+                    at unifying siloed systems, ensuring data quality, and enabling reliable analytics across
+                    the enterprise. I specialize in building the foundational data systems
+                    that enable organizations to confidently adopt AI and advanced analytics, ensuring
+                    accuracy, scalability, and trust. Passionate about data observability, governance, and
+                    creating pipelines that turn raw data into reliable business intelligence and innovation.</em></p>
               <p>
               <ul>
                 <li>Wichita, Kansas</li>
@@ -274,7 +281,7 @@
             <div class="resume-item">
               <h4>Data Analyst</h4>
               <h5>2020 - 2021</h5>
-              <p><em>Fleetcor, Wichita, KS </em></p>
+              <p><em>Fleetcor</em></p>
               <p>
               <ul>
                 <li>Performs extensive data analysis to best support business decision making for the sales team</li>
@@ -285,7 +292,7 @@
               </p>
               <h4>Front-End Web Developer</h4>
               <h5>2012 - 2021</h5>
-              <p><em>The Curtain Factory, Wichita, KS</em></p>
+              <p><em>The Curtain Factory</em></p>
               <p>
               <ul>
                 <li>Utilized HTML, CSS, Bootstrap and Adobe Photoshop in designing website to promote data</li>
@@ -396,7 +403,7 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+              <form action="https://formspree.io/f/mzzaorkj" method="POST">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
