--- a/WebDevelopment/webservices.html
+++ b/WebDevelopment/webservices.html
@@ -26,13 +26,6 @@
   <!-- Template Main CSS File -->
   <link href="../assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Laura - v4.3.0
-  * Template URL: https://bootstrapmade.com/laura-free-creative-bootstrap-theme/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
-</head>
 
 <body>
 
@@ -185,14 +178,10 @@
         <a href="https://www.linkedin.com/in/kerrywehner/" class="linkedin"><i class="bi bi-linkedin"></i></a>
                   </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Kerry Wehner</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Kerry Wehner</span></strong>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/laura-free-creative-bootstrap-theme/ -->
-        Designed by Kerry Wehner / <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by Kerry Wehner
       </div>
     </div>
   </footer>
