--- a/index.html
+++ b/index.html
@@ -206,14 +206,14 @@
             <h3 class="resume-title">Outline</h3>
             <div class="resume-item pb-0">
               <h4>Kerry Wehner</h4>
-              <p><em>Data Engineer with a strong foundation in designing, building, and maintaining modern
+              <p>Data Engineer with a strong foundation in designing, building, and maintaining modern
                     data infrastructure. Experienced in SQL development, ETL/ELT pipeline design, API
                     integration, and cloud-based warehousing in both AWS and Azure environments. Skilled
                     at unifying siloed systems, ensuring data quality, and enabling reliable analytics across
                     the enterprise. I specialize in building the foundational data systems
                     that enable organizations to confidently adopt AI and advanced analytics, ensuring
                     accuracy, scalability, and trust. Passionate about data observability, governance, and
-                    creating pipelines that turn raw data into reliable business intelligence and innovation.</em></p>
+                    creating pipelines that turn raw data into reliable business intelligence and innovation.</p>
               <p>
               <ul>
                 <li>Wichita, Kansas</li>
@@ -249,7 +249,7 @@
             <div class="resume-item">
 
               <h4>Data Engineer | Business Intelligence Developer</h4>
-              <h5>2022 - Current</h5>
+              <h5>2022 - 2025</h5>
               <p><em>MKC</em></p>
               <p>
               <ul>
@@ -315,31 +315,31 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bi-building"></i></div>
               <h4 class="title"><a href="WebDevelopment/webservices.html">Web Development</a></h4>
-              <p class="description">Full stack web development to suit each client's needs.</p>
+              <p class="description">I build custom websites tailored to exactly what a company needs, whether that means working in WordPress, Wix, or any platform they prefer. My process is rooted in clear, collaborative communication so every page reflects the brand’s personality and goals. The result is a site that feels polished, purposeful, and genuinely enjoyable to use.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="DataAnalysis/dataanalysis.html">Data Analysis</a></h4>
-              <p class="description">Taking your data, cleaning, analyzing, and interpreting to unveil priceless insights into your business.</p>
+              <h4 class="title"><a href="DataAnalysis/dataanalysis.html">Data Analysis & Visualization</a></h4>
+              <p class="description">Data pipelines that behave like well‑tuned conveyor belts, extracting raw information, transforming it with purpose, and loading it into clean, structured systems ready for exploration. The ETL process becomes the backbone of every project, turning chaotic inputs into dependable foundations for analysis. From there, I shape the data into visual stories that reveal patterns, momentum shifts, and opportunities hiding in plain sight. The goal is simple: give teams clarity.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-card-image"></i></div>
-              <h4 class="title"><a href="DataVisualization/datavisualization.html">Data Visualization</a></h4>
-              <p class="description">Extract, transform, and load your data to create visualizations that illustrate your vision.</p>
+              <h4 class="title"><a href="PerformanceAnalytics/PerformanceAnalytics.html">Performance Analytics</a></h4>
+              <p class="description">Performance Analytics uncovers patterns across the full landscape of competition, from evolving trends in athlete performance to the strategic needs that drive team success. The models highlight where training demands are shifting, where strengths or vulnerabilities are emerging, and how small changes can compound into meaningful competitive edges.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-diagram-2"></i></div>
-              <h4 class="title"><a href="">Web Scraping</a></h4>
-              <p class="description">Inventive automatation to retrieve countless diagnostics from the endless bounds of the web.</p>
+              <h4 class="title"><a href="WebScraping/webscrape.html">Web Scraping</a></h4>
+              <p class="description">Web Scraping turns messy, scattered data into clean, usable information tailored to whatever a business needs. I build custom scrapers that pull structured insights from complex sites, APIs, or traditional HTML pages. Every project focuses on clarity, accuracy, and communication so the final dataset actually solves a real problem.</p>
             </div>
           </div>
 
