--- a/WebScraping/webscrape.html
+++ b/WebScraping/webscrape.html
@@ -50,10 +50,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Web Development</h2>
+          <h2>Web Scraping</h2>
           <ol>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="webservices.html">Web Development</a></li>
+            <li><a href="webscrape.html">Web Scraping</a></li>
           </ol>
         </div>
 
@@ -77,13 +77,13 @@
         <!-- Slides -->
           <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide">
-              <img src="../assets/img/BWGLHome.png" alt="">
+              <img src="../assets/img/pythonscrape.png" alt="">
             </div>
             <div class="swiper-slide">
-              <img src="../assets/img/BWGLJoin.png" alt="">
+              <img src="../assets/img/jsonseen.png" alt="">
             </div>
             <div class="swiper-slide">
-              <img src="../assets/img/BWGLPictures.png" alt="">
+              <img src="../assets/img/scrapeemail.png" alt="">
             </div>               
           </div>
           <div class="swiper-pagination"></div>
@@ -93,19 +93,18 @@
       <!-- Python Info Boxes (Right Column) -->
       <div class="col-lg-4">
         <!-- Python Box 1 -->
-        <div class="portfolio-info python-overview">
-              <h3>Business Women's Golf League of Wichita</h3>
+        <div class="portfolio-info teetime-overview">
+              <h3>Tee Times</h3>
               <ul>
-                <li><strong>Client</strong>: BWGL of Wichita, Kansas</li>
-                <li><strong>Production Date</strong>: March 2025</li>
-                <li><strong>URL</strong>: <a href="#">https://www.bwglladysgolfwichita.com/</a></li>
+                <li><strong>Tools</strong>: Python, Firefox Developer, Launch Agents </li>
+                <li><strong>Production Date</strong>: January 2026</li>
               </ul>
             </div>
 
         <!-- Python Box 2 -->
         <div class="portfolio-info">
           <ul>
-            <li>I built and maintain the website for the Wichita Women’s Business Golf League, a growing community of women professionals who connect through golf. The site features regularly updated tournament schedules, standings, monthly newsletters, and photos from league events. I designed it to be both functional and welcoming—with an easy path for new members to learn more and join the league. This project blends my love for data, design, and community-building.</li>
+            <li>I built a Python automation script that monitors a city golf website for newly released tee times. Because the site uses dynamic, client‑side rendering, it requires more than simple HTML scraping, so I incorporated libraries that can handle asynchronous content and API‑driven updates. The script gathers all available tee times and compares them against a stored JSON file that tracks what’s already been seen. When new openings appear, it automatically sends me an email alert so I can act quickly. These visuals walk through the scraping workflow, the JSON‑based change detection, and the notification system.</li>
           </ul>
         </div>
       </div>
@@ -136,13 +135,13 @@
         <!-- Slides -->
             <div class="swiper-wrapper align-items-center">
               <div class="swiper-slide">
-                <img src="../assets/img/publichome.png" alt="">
+                <img src="../assets/img/pythonscrape.png" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="../assets/img/publicstory.png" alt="">
+                <img src="../assets/img/jupyterimport.png" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="../assets/img/brickyardhome.png" alt="">
+                <img src="../assets/img/jupyteranalysis.png" alt="">
               </div>               
             </div>
           <div class="swiper-pagination"></div>
@@ -152,17 +151,16 @@
       <!-- Python Info Boxes (Right Column) -->
       <div class="col-lg-4">
         <!-- Python Box 1 -->
-        <div class="portfolio-info python-overview">
-              <h3>Public at the Brickyard</h3>
+        <div class="portfolio-info nasa-overview">
+              <h3>Nasa Space Data</h3>
               <ul>
-                <li><strong>Client</strong>: Public at the Brickyard of Wichita, Kansas</li>
-                <li><strong>Production Date</strong>: December 2024</li>
-                <li><strong>URL</strong>: <a href="#">https://publicbrickyard.com</a></li>
+                <li><strong>Tools</strong>: Python, Selenium, Jupyter Notebooks</li>
+                <li><strong>Production Date</strong>: March 2021</li>
               </ul>
             </div>
             <div class="portfolio-info">
               <li>
-              Oversaw the transition of a restaurant’s website infrastructure to an internally managed server and hosting environment. This move improved performance, reliability, and long-term flexibility. I continue to manage updates to the server and site content to ensure a smooth experience for owners.</li>
+              I created a Python web‑scraping tool that pulls structured planetary data from NASA’s website using an HTML parser. Since the site exposes its information through traditional markup rather than dynamic rendering, I focused on clean parsing logic and reliable extraction patterns. The workflow uses a mix of Python libraries to fetch pages, parse key attributes, and organize the results into a usable format. All development and testing took place in Jupyter notebooks, which made it easy to iterate quickly and validate each stage of the scraper. </li>
             </ul>
           </div>
         </div>
