--- a/PerformanceAnalytics/PerformanceAnalytics.html
+++ b/PerformanceAnalytics/PerformanceAnalytics.html
@@ -25,8 +25,6 @@
 
   <!-- Template Main CSS File -->
   <link href="../assets/css/style.css" rel="stylesheet">
-
-
 </head>
 
 <body>
@@ -36,14 +34,19 @@
 
     <nav id="navbar" class="navbar">
       <ul>
-        <li><a class="nav-link scrollto" href="../index.html">Home</a></li>
-          <ul>
-        <li><a class="nav-link scrollto" href="../index.html#contact">Contact</a></li>
+        <li>
+          <a class="nav-link scrollto" href="../index.html">Home</a>
+        </li>
+        <li>
+          <a class="nav-link scrollto" href="../index.html#contact">Contact</a>
+        </li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
-    </nav><!-- .navbar -->
+    </nav>
+    <!-- .navbar -->
 
-  </header><!-- End Header -->
+  </header>
+  <!-- End Header -->
 
   <main id="main">
 
