--- a/WebDevelopment/webservices.html
+++ b/WebDevelopment/webservices.html
@@ -34,14 +34,19 @@
 
     <nav id="navbar" class="navbar">
       <ul>
-        <li><a class="nav-link scrollto" href="../index.html">Home</a></li>
-          <ul>
-        <li><a class="nav-link scrollto" href="/index.html#contact">Contact</a></li>
+        <li>
+          <a class="nav-link scrollto" href="../index.html">Home</a>
+        </li>
+        <li>
+          <a class="nav-link scrollto" href="../index.html#contact">Contact</a>
+        </li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
-    </nav><!-- .navbar -->
+    </nav>
+    <!-- .navbar -->
 
-  </header><!-- End Header -->
+  </header>
+  <!-- End Header -->
 
   <main id="main">
 
