--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"><i class="bi bi-clipboard-data"></i></div>
               <h4 class="title"><a href="DataAnalysis/dataanalysis.html">Data Analysis & Visualization</a></h4>
               <p class="description">Data pipelines that behave like well‑tuned conveyor belts, extracting raw information, transforming it with purpose, and loading it into clean, structured systems ready for exploration. The ETL process becomes the backbone of every project, turning chaotic inputs into dependable foundations for analysis. From there, I shape the data into visual stories that reveal patterns, momentum shifts, and opportunities hiding in plain sight. The goal is simple: give teams clarity.</p>
             </div>
@@ -329,7 +329,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
-              <div class="icon"><i class="bi bi-card-image"></i></div>
+              <div class="icon"><i class="bi bi-person-lines-fill"></i></div>
               <h4 class="title"><a href="PerformanceAnalytics/PerformanceAnalytics.html">Performance Analytics</a></h4>
               <p class="description">Performance Analytics uncovers patterns across the full landscape of competition, from evolving trends in athlete performance to the strategic needs that drive team success. The models highlight where training demands are shifting, where strengths or vulnerabilities are emerging, and how small changes can compound into meaningful competitive edges.</p>
             </div>
@@ -337,7 +337,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
-              <div class="icon"><i class="bi bi-diagram-2"></i></div>
+              <div class="icon"><i class="bi bi-text-paragraph"></i></div>
               <h4 class="title"><a href="WebScraping/webscrape.html">Web Scraping</a></h4>
               <p class="description">Web Scraping turns messy, scattered data into clean, usable information tailored to whatever a business needs. I build custom scrapers that pull structured insights from complex sites, APIs, or traditional HTML pages. Every project focuses on clarity, accuracy, and communication so the final dataset actually solves a real problem.</p>
             </div>
