adding new pics for nwsl

--- a/PerformanceAnalytics/PerformanceAnalytics.html
+++ b/PerformanceAnalytics/PerformanceAnalytics.html
@@ -147,19 +147,27 @@
           <!-- Slides -->
           <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide">
-                  <img src="../assets/img/nwslstats.png" alt="">
+                  <img src="../assets/img/nwsloverview.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/nwslteamstats.png" alt="">
+                  <img src="../assets/img/offensivestats.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/nwslgoals.png" alt="">
+                  <img src="../assets/img/needsforimprovement.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/goalconversion.png" alt="">
+                  <img src="../assets/img/gk_savepct_overtime.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/teamsovertime.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/teamsovertimeallstats.png" alt="">
                 </div>
 
               </div>
